# fivedrisk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  decision-log-cookbook.md  demo.py  mitre-atlas-coverage.md  owasp-agentic-top10-coverage.md  owasp-llm-top10-coverage.md  policy.yaml  pyproject.toml
.bench-venv/: pyvenv.cfg
.github/workflows/: bench.yml  tests.yml
benchmarks/: README.md  aiid-reconstructions.yaml  bench_ci.py  bench_minimal.py  check_regression.py
docs/: quickstart.md
examples/: README.md  langgraph_multi_step.py  minimal_gate.py  openai_agents_sdk_hook.py  spiffe_mcp_passthrough.py
fivedrisk/: ARCHITECTURE.md  README.md  RUNTIME_CONVENTIONS.md  VALIDATION_NOTES_2026-04-14.md  __init__.py  __main__.py  benchmarks.py  budget_accumulator.py  classifier.py  cli.py  detectors.py  drift.py  events.py  gateway.py  hooks.py  langgraph_node.py  logger.py  markov.py  policy.py  router.py  schema.py  scorer.py  token_costs.py
fivedrisk-plugin/: README.md  policy.yaml
fivedrisk-plugin/.claude-plugin/: plugin.json
fivedrisk-plugin/hooks/: hooks.json
fivedrisk-plugin/skills/five-d-score/: SKILL.md
fivedrisk/fixtures/attacker/: safe_article.txt  webfetch_hidden_override.html  webfetch_prompt_exfil.txt
fivedrisk/policies/: __init__.py
fivedrisk/policies/presets/: code_execution.yaml  customer_data.yaml  financial_operations.yaml  human_approval_required.yaml  read_only.yaml
fivedrisk/tests/: test_acting_identity.py  test_atlas_coverage.py  test_budget_accumulator.py  test_budget_enforcement_integration.py  test_classifier.py  test_classifier_capability.py  test_classifier_per_dim.py  test_cli_benchmarks.py  test_drift.py  test_drift_capability.py  test_gateway.py  test_golden_set.py  test_hooks.py  test_logger.py  test_logger_capability.py  test_markov.py  test_ndjson_events.py  test_policy_budget_attributes.py  test_router.py  test_router_capability.py  test_runtime_benchmarks.py  test_runtime_controls.py  test_scorer.py  test_scorer_capability.py
fivedrisk/tests/golden_set/: ask_bash_docker_restart.json  ask_high_composite.json  ask_web_fetch_untrusted.json  ask_write_vault_file.json  go_grep_codebase.json  go_read_local_file.json  go_write_temp_file.json  stop_bash_rm_rf.json  stop_credential_access.json  stop_send_email_with_pii.json
